@@ -50,8 +50,7 @@ public final class SqliteConnectionManager {
 
     SqliteConnectionManager(long poolSize, long poolReaperIntervalMs) {
         if (LOGGER.isLoggable(Level.INFO)) {
-            LOGGER.info(String.format(
-                    "Initiating connection poll: [poolSize='%d', poolReaperIntervalMs='%d'].",
+            LOGGER.info("Initiating connection poll: [poolSize='%d', poolReaperIntervalMs='%d'].".formatted(
                     poolSize, poolReaperIntervalMs));
         }
         // let's load the sqlite driver
@@ -67,15 +66,14 @@ public final class SqliteConnectionManager {
         new Thread(() -> {
                     while (!stopPoolReaper) {
                         if (LOGGER.isLoggable(Level.FINE)) {
-                            LOGGER.fine(String.format(
-                                    "Current pool size is '%d' and threshold is '%f'.",
+                            LOGGER.fine("Current pool size is '%d' and threshold is '%f'.".formatted(
                                     pool.size(), poolSizeThreshold));
                         }
                         if (pool.size() > poolSizeThreshold) {
                             // we exceed the pool size threshold, time to reap the less used
                             // connections
                             if (LOGGER.isLoggable(Level.INFO)) {
-                                LOGGER.info(String.format("Reaping connections, current pool size %d.", pool.size()));
+                                LOGGER.info("Reaping connections, current pool size %d.".formatted(pool.size()));
                             }
                             List<PooledConnection> pooledConnections = new ArrayList<>(pool.values());
                             Collections.sort(pooledConnections);
@@ -124,7 +122,7 @@ public final class SqliteConnectionManager {
     /** Submit an SQL statement to be executed with the provided connection. */
     void executeSql(Connection connection, String sql, Object... parameters) {
         if (LOGGER.isLoggable(Level.FINE)) {
-            LOGGER.fine(String.format("Executing SQL '%s'.", sql));
+            LOGGER.fine("Executing SQL '%s'.".formatted(sql));
         }
         try (PreparedStatement statement = connection.prepareStatement(sql)) {
             for (int i = 0; i < parameters.length; i++) {
@@ -146,7 +144,7 @@ public final class SqliteConnectionManager {
     /** Submit a query to be executed with the provided connection. */
     <T> T executeQuery(Connection connection, ResultExtractor<T> extractor, String query, Object... parameters) {
         if (LOGGER.isLoggable(Level.FINE)) {
-            LOGGER.fine(String.format("Executing query '%s'.", query));
+            LOGGER.fine("Executing query '%s'.".formatted(query));
         }
         try (PreparedStatement statement = connection.prepareStatement(query)) {
             for (int i = 0; i < parameters.length; i++) {
@@ -170,11 +168,11 @@ public final class SqliteConnectionManager {
     <T> T doWork(File file, boolean readOnly, WorkWithResult<T> work) {
         if (readOnly) {
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("Starting work on file '%s' in readonly mode.", file));
+                LOGGER.fine("Starting work on file '%s' in readonly mode.".formatted(file));
             }
         } else {
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("Starting work on file '%s' in write mode.", file));
+                LOGGER.fine("Starting work on file '%s' in write mode.".formatted(file));
             }
         }
         // let's find or instantiate on the fly a pool connection for the current file
@@ -197,7 +195,7 @@ public final class SqliteConnectionManager {
                 }
             }
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("Work on file '%s' is done.", file));
+                LOGGER.fine("Work on file '%s' is done.".formatted(file));
             }
             return result;
         } finally {
@@ -212,7 +210,7 @@ public final class SqliteConnectionManager {
 
     void replace(File currentFile, File newFile) {
         if (LOGGER.isLoggable(Level.FINE)) {
-            LOGGER.fine(String.format("Replacing file '%s' with file '%s'.", currentFile, newFile));
+            LOGGER.fine("Replacing file '%s' with file '%s'.".formatted(currentFile, newFile));
         }
         PooledConnection currentPooledConnection =
                 getPooledConnection(currentFile).getWriteLockOnValidConnection();
@@ -223,7 +221,7 @@ public final class SqliteConnectionManager {
             }
             FileUtils.moveFile(newFile, currentFile);
             if (LOGGER.isLoggable(Level.INFO)) {
-                LOGGER.info(String.format("File '%s' replaced with file '%s'.", currentFile, newFile));
+                LOGGER.info("File '%s' replaced with file '%s'.".formatted(currentFile, newFile));
             }
         } catch (Exception exception) {
             throw Utils.exception(exception, "Error replacing file '%s' with file '%s'.", currentFile, newFile);
@@ -234,11 +232,11 @@ public final class SqliteConnectionManager {
 
     void delete(File file) {
         if (LOGGER.isLoggable(Level.FINE)) {
-            LOGGER.fine(String.format("Deleting file '%s'.", file));
+            LOGGER.fine("Deleting file '%s'.".formatted(file));
         }
         if (!file.exists()) {
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("File '%s' doesn't exists.", file));
+                LOGGER.fine("File '%s' doesn't exists.".formatted(file));
             }
             return;
         }
@@ -248,7 +246,7 @@ public final class SqliteConnectionManager {
             FileUtils.deleteQuietly(file);
             pool.remove(file);
             if (LOGGER.isLoggable(Level.INFO)) {
-                LOGGER.info(String.format("File '%s' deleted.", file));
+                LOGGER.info("File '%s' deleted.".formatted(file));
             }
         } catch (Exception exception) {
             throw Utils.exception(exception, "Error deleting file '%s'.", file);
@@ -259,7 +257,7 @@ public final class SqliteConnectionManager {
 
     void rename(File currentFile, File newFile) {
         if (LOGGER.isLoggable(Level.FINE)) {
-            LOGGER.fine(String.format("Renaming file '%s' to '%s'.", currentFile, newFile));
+            LOGGER.fine("Renaming file '%s' to '%s'.".formatted(currentFile, newFile));
         }
         PooledConnection pooledConnection = getPooledConnection(currentFile).getWriteLockOnValidConnection();
         try {
@@ -267,7 +265,7 @@ public final class SqliteConnectionManager {
             pool.remove(currentFile);
             FileUtils.moveFile(currentFile, newFile);
             if (LOGGER.isLoggable(Level.INFO)) {
-                LOGGER.info(String.format("File '%s' renamed to '%s'.", currentFile, newFile));
+                LOGGER.info("File '%s' renamed to '%s'.".formatted(currentFile, newFile));
             }
         } catch (Exception exception) {
             throw Utils.exception(exception, "Renaming file '%s' to '%s'.", currentFile, newFile);
@@ -303,7 +301,7 @@ public final class SqliteConnectionManager {
             }
             // creating a new pooled connection for the database file
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("Creating pooled connection to file '%s'.", file));
+                LOGGER.fine("Creating pooled connection to file '%s'.".formatted(file));
             }
             pooledConnection = new PooledConnection(file);
             pooledConnection.getWriteLock();
@@ -312,7 +310,7 @@ public final class SqliteConnectionManager {
                 if (existing != null) {
                     // someone create a pooled connection for this file in the meantime
                     if (LOGGER.isLoggable(Level.FINE)) {
-                        LOGGER.fine(String.format("Connection to file '%s' already exists, closing this one.", file));
+                        LOGGER.fine("Connection to file '%s' already exists, closing this one.".formatted(file));
                     }
                     pooledConnection.closeConnection();
                     return existing;
@@ -370,7 +368,7 @@ public final class SqliteConnectionManager {
             pool.remove(file);
             releaseWriteLock();
             if (LOGGER.isLoggable(Level.INFO)) {
-                LOGGER.info(String.format("Connection to file '%s' reaped.", file));
+                LOGGER.info("Connection to file '%s' reaped.".formatted(file));
             }
         }
 
@@ -384,7 +382,7 @@ public final class SqliteConnectionManager {
                     throw Utils.exception("Error closing connection to file '%s'.", file);
                 }
                 if (LOGGER.isLoggable(Level.INFO)) {
-                    LOGGER.info(String.format("Connection to file '%s' closed.", file));
+                    LOGGER.info("Connection to file '%s' closed.".formatted(file));
                 }
             }
         }
@@ -393,11 +391,11 @@ public final class SqliteConnectionManager {
             String logId = "";
             if (LOGGER.isLoggable(Level.FINE)) {
                 logId = UUID.randomUUID().toString();
-                LOGGER.fine(String.format("[%s] Waiting for read lock on file '%s'.", logId, file));
+                LOGGER.fine("[%s] Waiting for read lock on file '%s'.".formatted(logId, file));
             }
             lock.readLock().lock();
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("[%s] Read lock on file '%s' obtained.", logId, file));
+                LOGGER.fine("[%s] Read lock on file '%s' obtained.".formatted(logId, file));
             }
         }
 
@@ -424,7 +422,7 @@ public final class SqliteConnectionManager {
         void releaseReadLock() {
             lock.readLock().unlock();
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("Read lock on file '%s' released.", file));
+                LOGGER.fine("Read lock on file '%s' released.".formatted(file));
             }
         }
 
@@ -432,11 +430,11 @@ public final class SqliteConnectionManager {
             String logId = "";
             if (LOGGER.isLoggable(Level.FINE)) {
                 logId = UUID.randomUUID().toString();
-                LOGGER.fine(String.format("[%s] Waiting for write lock on file '%s'.", logId, file));
+                LOGGER.fine("[%s] Waiting for write lock on file '%s'.".formatted(logId, file));
             }
             lock.writeLock().lock();
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("[%s] Write lock on file '%s' obtained.", logId, file));
+                LOGGER.fine("[%s] Write lock on file '%s' obtained.".formatted(logId, file));
             }
         }
 
@@ -463,13 +461,13 @@ public final class SqliteConnectionManager {
         void releaseWriteLock() {
             lock.writeLock().unlock();
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(String.format("Write lock on file '%s' released.", file));
+                LOGGER.fine("Write lock on file '%s' released.".formatted(file));
             }
         }
 
         private Connection openConnection(File file) {
             if (LOGGER.isLoggable(Level.INFO)) {
-                LOGGER.info(String.format("Opening connection to file '%s'.", file));
+                LOGGER.info("Opening connection to file '%s'.".formatted(file));
             }
             Utils.createFileParents(file);
             try {
